--- a/html/registration_page.html
+++ b/html/registration_page.html
@@ -86,7 +86,7 @@
             </div>
 
          </div>
-         
+
       </div>
 
       <div class="container"> 
@@ -109,8 +109,6 @@
                   <script src="/js/captcha.js"></script> 
          </div>
 
-        <!-- <script src="CaptCha.js"></script>  -->
-
       <script>
          const loginText = document.querySelector(".title-text .login");
          const loginForm = document.querySelector("form.login");
@@ -131,21 +129,23 @@
          });
       </script>
 
-<script> //make popup appear
-   let popup= document.getElementById("popup");
-   let cb = document.getElementById("MyCheckbox")
-   function PopupAppear(){
-   if(cb.checked == true){
-      popup.classList.add("open-popup");
-   }else{
-      popup.classList.remove("open-popup");
-   }
-}
+   <script> 
+      // ! Popup Function
+      let popup= document.getElementById("popup");
+      let cb = document.getElementById("MyCheckbox")
+      function PopupAppear(){
+      if(cb.checked == true){
+         popup.classList.add("open-popup");
+      }else{
+         popup.classList.remove("open-popup");
+      }
+      }
 
-function PopupClose(){ //temporary-will figure this out soon
-   popup.classList.remove("open-popup");
-}
-</script>
+      function PopupClose(){ 
+         // Temporary-will figure this out soon
+         popup.classList.remove("open-popup");
+      }
+   </script>
 
    </body>
 </html>
