--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -180,6 +180,8 @@
 
     </div>
 
+    <script src="/js/upload-file.js"></script>
+
     <script>
         var modal = document.getElementById("myModal");
     
