--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="grid-item-nav">
-            <button id="btn1"><i class="fa-solid fa-upload"></i> Upload</button>
+            <button id="btn1" class="upload-btn"><i class="fa-solid fa-upload"></i> Upload</button>
             <button id="btn1"><i class="fa-solid fa-trash"></i> Delete</button>
             <button id="btn1"><i class="fa-solid fa-bookmark"></i> Saved</button>
         </div>
