--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -181,7 +181,7 @@
 
     </div>
 
-    <script src="/js/upload-file.js"></script>
+    <script src="/js/upload-popup.js"></script>
 
     <script>
         var modal = document.getElementById("myModal");
