--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -13,20 +13,24 @@
     <div class="grid-container-top">
 
         <div class="grid-item-button">
+
             <button id="btn">
                 <i class="fa-solid fa-box-archive"></i>
                 <a style="text-decoration: none; color: #fff; font-size: 15px; font-weight: 500;" 
                 rel="Archive" href="/html/archive_page.html" onclick="history.go(-1)">Archive</a>
             </button>
+
             <button id="btn">
                 <i class="fa-solid fa-house"></i>
                 <a style="text-decoration: none; color: #fff; font-size: 15px; font-weight: 500;" 
                 rel="Home" href="/index.html" onclick="history.go(-1)">Home</a>
             </button>
+
             <button id="btn">
                 <i class="fa-solid fa-right-from-bracket"></i>
                 <!-- <a style="text-decoration: none; color: #fff; font-size: 15px; font-weight: 500;" rel="Logout" href="" onclick="history.go(-1)">Logout</a> -->
              Logout</button>
+
         </div>
 
         <div class="grid-item-pp">
@@ -36,6 +40,7 @@
         <div class="grid-item">
             <div class="username">
                 <div>
+                    <!-- TODO: Function - From PHP Session, it takes the user's details and place it under name -->
                     <p>Username goes here</p>
                 </div>
                 <div>
