--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -39,13 +39,17 @@
 
         <div class="grid-item">
             <div class="username">
+                
                 <div>
                     <!-- TODO: Function - From PHP Session, it takes the user's details and place it under name -->
-                    <p>Username goes here</p>
+                    <p id="profile-username">Username goes here</p>
                 </div>
+
                 <div>
-                    <p>Photos uploaded : 0</p>
+                    <span>Photos uploaded: </span>
+                    <span id="photo-counter">0</span>
                 </div>
+                
             </div>
         </div>
 
