--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -42,14 +42,14 @@
                 
                 <div>
                     <!-- TODO: Function - From PHP Session, it takes the user's details and place it under name -->
-                    <p id="profile-username">Username goes here</p>
+                    <p id="profile-username">USERNAME</p>
                 </div>
 
                 <div>
                     <span>Photos uploaded: </span>
                     <span id="photo-counter">0</span>
                 </div>
-                
+
             </div>
         </div>
 
@@ -63,6 +63,8 @@
 
     <!-- ! Main Contents - Images -->
     <div class="grid-container-bottom">
+
+        <!-- TODO: Reminder: Make this div as a template in JS -->
         <div class="polaroid">
             <div class="pol-img">
                 <img id="myImg" src="https://images.unsplash.com/photo-1533105079780-92b9be482077?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="Santorini">
