Added Popup button

--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -11,6 +11,25 @@
 <body>
     <!-- ! Header -->
     <div class="grid-all-contents"  id="blur">
+
+        <div id="popup-upload">
+            <h3>Upload your Pictures!</h3>
+            <form action="" method="">
+
+                <div>
+                    <input type="file" name="file-upload" id="file-upload">
+                </div>
+
+                <div>
+                    <input type="submit" value="Submit" id="submit-btn" class="popup-focused-btn">
+                    <input type="button" value="Cancel" id="cancel-btn" class="popup-focused-btn">
+                </div>
+
+
+            </form>
+
+        </div>
+
         <div class="grid-container-top">
         
             <div class="grid-item-button">
