--- a/html/registered_viewer.html
+++ b/html/registered_viewer.html
@@ -12,19 +12,24 @@
     <!-- ! Header -->
     <div class="grid-all-contents"  id="blur">
 
-        <div id="popup-upload">
-            <h3>Upload your Pictures!</h3>
+        <div class="popup-upload">
+            
             <form action="" method="">
 
-                <div>
-                    <input type="file" name="file-upload" id="file-upload">
+                <div class="file-input-div">
+                    <h3>Upload your Pictures!</h3>
+                    <input type="file" name="file-upload" id="file-upload-input">
                 </div>
 
-                <div>
+                <div class="caption-input-div">
+                    <h3>Caption</h3>
+                    <input type="text" name="caption" id="caption">
+                </div>
+
+                <div class="submission-input-div">
                     <input type="submit" value="Submit" id="submit-btn" class="popup-focused-btn">
                     <input type="button" value="Cancel" id="cancel-btn" class="popup-focused-btn">
                 </div>
-
 
             </form>
 
